# TeleDrive

./: FUTURE.md  README.md
.github/: FUNDING.yml
api/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  generate_telegram_bot_session.py  gunicorn.conf.py  install_python_packages.sh  manage.py  pyproject.toml  pytest.ini
api/apps/api/: metadata.py  middleware.py  views.py
api/apps/api/v1/: urls.py
api/apps/auth/: jwt.py  models.py  tokens.py  urls.py  validators.py  views.py
api/apps/auth/migrations/: 0001_initial.py  0002_alter_deleted_at.py
api/apps/auth/user/: serializers.py  urls.py  validators.py  views.py
api/apps/tdlib/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py  wrapper.py
api/apps/tdlib/migrations/: 0001_initial.py  0002_add_uploaded_at.py  0002_file_message.py  0003_add_file_uuid.py  0003_rename_binary_message.py  0004_alter_file_index.py  0005_alter_file_and_create_short_url.py  0006_alter_shorturl_table.py
api/apps/tmpls/: welcome.txt
api/apps/utils/: models.py  validators.py
api/baseapi/: asgi.py  settings.py  urls.py  wsgi.py
api/baseapi/local/en_US/LC_MESSAGES/: django.mo  django.po
api/nginx/: nginx.conf
deploy/: .gitignore  Makefile  ansible.cfg  api.yaml  baseapi.yaml  commons.yaml  droplet.yaml  inventory.yaml  nginx.yaml  postgresql.yaml  requirements.yaml  vm.yaml  web.yaml
infra/: alerts.tf  dns.tf  droplets.tf  firewalls.tf  main.tf  outputs.tf  project.tf  providers.tf  uptime.tf  variables.tf  vpc.tf
terraform/: acm.tf  alb.tf  alerts.tf  apps.tf  cloudwatch.tf  dns.tf  droplets.tf  ec2.tf  id_rsa.pub  locals.tf  networking.tf  outputs.tf  providers.tf  rds.tf  security.tf  storages.tf  variables.tf  vpc.tf
web/: .dockerignore  .env.example  .eslintrc.json  .gitignore  .prettierignore  Dockerfile  Makefile  (+3 more)
(+111 files in other folders)
